GPC/tests/examples/fail/errArith3.gpc


void GPRM::Test::errArith3() {
    return 3 | 3.0;
}

